Fix overflow on desktop

--- a/assets/scss/layout/_container.scss
+++ b/assets/scss/layout/_container.scss
@@ -1,6 +1,7 @@
 .container {
   padding: 0 2rem;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 @include for-tablet-portrait-up {
